--- a/public/index.html
+++ b/public/index.html
@@ -10,21 +10,18 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <title>Spot Finder</title>
+    <link
+      rel="st­yle­she­et"
+      href="h­ttp­s:/­/fo­nts.go­ogl­eap­is.c­om­/cs­s?f­ami­ly=­Rob­oto­:30­0,4­00,­500­,70­0&­dis­pla­y=s­wap­"
+    />
+    <link
+      rel="st­yle­she­et"
+      href="h­ttp­s:/­/fo­nts.go­ogl­eap­is.c­om­/ic­on?­fam­ily­=Ma­ter­ial­+Ic­ons­"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
