finished login/registration form on home page

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,11 @@
       rel="st­yle­she­et"
       href="h­ttp­s:/­/fo­nts.go­ogl­eap­is.c­om­/ic­on?­fam­ily­=Ma­ter­ial­+Ic­ons­"
     />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js"
+      integrity="sha256-hBMojZuWKocCflyaG8T19KBq9OlTlK39CTxb8AUWKhY="
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
